# actualism-app

./: .envrc  README.md  actualism-app.cabal  flake.nix  justfile
.github/workflows/: ci.yaml  deploy.yaml
content/: appreciation.md  awareness.md  choice.md  condenj.md  index.md  intelligence.md  naivete.md
nix/modules/flake-parts/: devshell.nix  haskell.nix
nix/modules/flake-parts/nixos/: app.nix  configuration.nix  default.nix  known_hosts  networking.nix
placeholder/: index.html
src/: Main.hs
src/ActualismApp/: Definition.hs  Hx.hs  Markdown.hs  Popup.hs  Style.hs
